--- a/l10n_jp_address_layout/i18n/ja_JP.po
+++ b/l10n_jp_address_layout/i18n/ja_JP.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 11.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-01-02 07:50+0000\n"
-"PO-Revision-Date: 2018-01-02 07:50+0000\n"
+"POT-Creation-Date: 2018-04-13 06:55+0000\n"
+"PO-Revision-Date: 2018-04-13 06:55+0000\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -21,6 +21,16 @@ msgid "(edit)"
 msgstr "(編集)"
 
 #. module: l10n_jp_address_layout
+#: selection:res.partner.title,title_position:0
+msgid "After Name"
+msgstr "名前の後"
+
+#. module: l10n_jp_address_layout
+#: selection:res.partner.title,title_position:0
+msgid "Before Name"
+msgstr "名前の前"
+
+#. module: l10n_jp_address_layout
 #: model:ir.ui.view,arch_db:l10n_jp_address_layout.res_partner_japan_address_form
 msgid "City"
 msgstr "市区町村"
@@ -29,11 +39,6 @@ msgstr "市区町村"
 #: model:ir.ui.view,arch_db:l10n_jp_address_layout.res_partner_japan_address_form
 msgid "Country"
 msgstr "国"
-
-#. module: l10n_jp_address_layout
-#: model:ir.model,name:l10n_jp_address_layout.model_res_country_state
-msgid "Country state"
-msgstr "都道府県/州"
 
 #. module: l10n_jp_address_layout
 #: model:ir.ui.view,arch_db:l10n_jp_address_layout.res_partner_japan_address_form
@@ -51,6 +56,24 @@ msgid "Street..."
 msgstr "町名番地…"
 
 #. module: l10n_jp_address_layout
+#: model:ir.model.fields,field_description:l10n_jp_address_layout.field_res_partner_title_title_position
+msgid "Title Position"
+msgstr "タイトル位置"
+
+#. module: l10n_jp_address_layout
 #: model:ir.ui.view,arch_db:l10n_jp_address_layout.res_partner_japan_address_form
 msgid "ZIP"
 msgstr "郵便番号"
+
+#. module: l10n_jp_address_layout
+#: model:ir.model,name:l10n_jp_address_layout.model_res_partner_title
+msgid "res.partner.title"
+msgstr "res.partner.title"
+
+#. module: l10n_jp_address_layout
+#: model:res.partner.title,name:l10n_jp_address_layout.res_partner_title_onchuu
+#: model:res.partner.title,shortcut:l10n_jp_address_layout.res_partner_title_onchuu
+msgid "御中"
+msgstr "御中"
+
+
