--- a/l10n_jp_address_layout/i18n/ja_JP.po
+++ b/l10n_jp_address_layout/i18n/ja_JP.po
@@ -41,6 +41,11 @@ msgid "Country"
 msgstr "国"
 
 #. module: l10n_jp_address_layout
+#: model:ir.model,name:l10n_jp_address_layout.model_res_country_state
+msgid "Country state"
+msgstr "都道府県/州"
+
+#. module: l10n_jp_address_layout
 #: model:ir.ui.view,arch_db:l10n_jp_address_layout.res_partner_japan_address_form
 msgid "State"
 msgstr "都道府県/州"
